episode-19.1/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: "*.example.com"

    - name: https
      protocol: HTTPS
      port: 8443
      hostname: web.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-tls
