episode-19.1/header-modification.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-mod-route
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Custom-Header
                value: custom-value
            set:
              - name: X-Forwarded-Proto
                value: https
            remove:
              - X-Internal-Header
      backendRefs:
        - name: api-service
          port: 8080
