episode-19.1/https-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "secure.example.com"
  rules:
    - backendRefs:
        - name: web-service
          port: 80
