episode-19.1/method-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: method-route
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - method: POST
          path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: write-service
          port: 8080
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: read-service
          port: 8080
