episode-19.1/query-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: query-route
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - queryParams:
            - name: version
              value: beta
      backendRefs:
        - name: beta-service
          port: 8080
    - matches:
        - queryParams:
            - name: version
              value: stable
      backendRefs:
        - name: stable-service
          port: 8080
